--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -45,9 +45,7 @@ html body {
 }
 
 #menu-items {
-
     padding-bottom: 100px;
-
 }
 
 /*Language chooser before header*/
@@ -152,16 +150,16 @@ select {
   opacity:1 !important;
   filter: alpha(opacity=100) !important
 }
-.process-row:before{
-  top:60px;
-  bottom:0;
-  position:absolute;
-  content:" ";
-  width:97%;
-  height:1px;
-  background-color:#ccc;
-  z-order:0
-}
+/*.process-row:before{*/
+  /*top:60px;*/
+  /*bottom:0;*/
+  /*position:absolute;*/
+  /*content:" ";*/
+  /*width:97%;*/
+  /*height:1px;*/
+  /*background-color:#ccc;*/
+  /*z-order:0*/
+/*}*/
 .process-step{
   display:table-cell;
   text-align:center;
@@ -202,10 +200,43 @@ select {
         border-radius: 2px;
         width: 100%;
     }
-
-    body html .tab-pane select {
-        width: 100%;
+    html body select {
+        background-size: 10px;
     }
+
+    body html .tab-pane select, input {
+        width: 100%;
+        margin: 0 10px;
+        min-width: 60px;
+    }
+
+    html body .process-step .btn-circle {
+        width: 65px;
+        height: 65px;
+    }
+    html body .process-step .btn-circle .fa-3x{
+        font-size: 2em;
+    }
+
+
+    body html footer {
+        font-size: 10px;
+        margin-top: 1px;
+    }
+
+    html body .amounts .panel {
+        padding: 0;
+    }
+
+    html body .supported-payments {
+        min-height: 200px;
+        padding: 0;
+    }
+
+    html body .spa-navigation {
+        margin-bottom: 20px;
+    }
+
 }
 .navlink {
     float: left;
@@ -221,7 +252,7 @@ select {
 }
 
 .amount {
-    min-width: 40px;
+    min-width: 55px;
 }
 
 #formLogin {
