--- a/templates/core/partials/breadcrumbs.html
+++ b/templates/core/partials/breadcrumbs.html
@@ -2,18 +2,17 @@
   <div class="process panel">
    <div class="process-row nav nav-tabs">
     <div class="process-step step1">
-     <button type="button" class="btn btn-info btn-circle disableClick" data-toggle="tab" href="#menu1"><i class="fa fa-bar-chart fa-3x"></i></button>
+     <button type="button" class="btn btn-info btn-circle disableClick" data-toggle="tab" href="#menu1">
+      <i class="fa fa-bar-chart fa-3x"></i></button>
      <p><small>{% trans "Check" %}<br />{% trans "Graph" %}</small></p>
     </div>
     <div class="process-step step2">
      <button type="button" class="btn btn-default btn-circle btn-register disableClick"
              data-toggle="tab" href="#menu2"><i class="fa fa-mobile fa-3x"></i></button>
-     <p><small>{% trans "Already User ?" %}<br />{% trans "Register !" %}</small></p>
+     <p><small>{% trans "Already a User ?" %}<br />{% trans "Register !" %}</small></p>
     </div>
     <div class="process-step step3">
-     <button type="button" class="{% if user.is_authenticated %}
-         btn btn-default btn-circle disableClick
-        {% else %} btn btn-default btn-circle disabled disableClick {% endif %}"
+     <button type="button" class="btn btn-default btn-circle disableClick"
         data-toggle="tab" href="#menu3"><i class="fa fa-btc fa-3x"></i></button>
      <p><small>{% trans "Confirm your" %}<br />{% trans "Order" %}</small></p>
     </div>
