--- a/templates/core/partials/steps/step_amount.html
+++ b/templates/core/partials/steps/step_amount.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="row">
-        <div class="col-xs-5 col-sm-5 col-md-5">
+        <div class="col-xs-5 col-sm-5 col-md-5 amounts">
             <div class="panel panel-default">
                 <div class="panel-body">
                     <div class="input-group">
@@ -56,7 +56,7 @@
             <h2>{% trans "To" %}</h2>
         </div><!-- /col -->
 
-        <div class="col-sm-5 col-xs-5 col-md-5">
+        <div class="col-sm-5 col-xs-5 col-md-5 amounts">
             <div class="panel panel-default">
                 <div class="panel-body">
                     <div class="input-group">
