--- a/templates/core/order.html
+++ b/templates/core/order.html
@@ -24,11 +24,10 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/highcharts-more.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <script src="{% static 'js/all.js' %}"></script>
-  <!--  <script src="{% static 'js/models/Order.js' %}"></script>
+    <script src="{% static 'js/models/Order.js' %}"></script>
     <script src="{% static 'js/models/PaymentPreference.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
-    <script src="{% static 'js/add_orders.js' %}"></script>-->
+    <script src="{% static 'js/add_orders.js' %}"></script>
     <script src="{% static 'bower_components/card/dist/jquery.card.js' %}"></script>
     <script src="{% static 'bower_components/intl-tel-input/build/js/intlTelInput.min.js' %}"></script>
 {% endblock %}
