#2 HOURS moved phone verification from main screen fixed second step to show phone pane

--- a/templates/core/partials/forms/phone.html
+++ b/templates/core/partials/forms/phone.html
@@ -7,9 +7,9 @@
         <input type="text" name="phone" class="phone val"
                value="{% if user.is_authenticated  %}{{ user.profile.phone }}{% else %}+7{% endif %}">
     </div>
-    <div class="row">
+<!--    <div class="row">
         <div class="col-sm-4 col-sm-offset-4">
             <span class="btn btn-primary save save-phone">{% trans "Go" %}</span>
         </div>
-    </div>
+    </div>-->
 </div>
