--- a/templates/core/partials/steps/step_confirmation.html
+++ b/templates/core/partials/steps/step_confirmation.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% block step_content %}
     <div class="row step-confirm">
-        <h3>{% trans "Order" %}</h3>
+        <h3>{% trans "Your Order" %}</h3>
         <div class="col-sm-12 center">
             <div class="col-sm-5 col-md-5">
                 <div class="col-lg-12">
@@ -22,6 +22,12 @@
                 <div class="currency col-lg-12">
                     <!--{%  trans "RUB" %}-->
                 </div>
+            </div>
+            <div class="col-lg-12">
+                <h3>{% trans "Payment Method" %}</h3>
+            </div>
+            <div class="col-lg-12">
+                <h3 class="payment-preference-confirm"></h3>
             </div>
 
         <div style="display:none">
