--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -56,6 +56,8 @@
         {% block main %}
         {% endblock %}
     </div>
+   {% block footer %}
+   {%  endblock %}
     {% include 'core/partials/popular_faq.html' %}
     {% include 'core/partials/seo_footer.html' %}
     {% include 'core/partials/footer.html' %}
