--- a/templates/core/partials/modals/order_success_buy.html
+++ b/templates/core/partials/modals/order_success_buy.html
@@ -1,5 +1,5 @@
 <!-- Modal for Sell Action-->
-<div class="modal fade" id="orderSuccessModalSell" role="dialog">
+<div class="modal fade" id="orderSuccessModal" role="dialog">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -7,7 +7,7 @@
           <h4 class="modal-title">Success</h4>
         </div>
         <div class="modal-body successOrder">
-            {% include 'core/partials/success_order_sell.html' %}
+            {% include 'core/partials/success_order.html' %}
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
