--- a/templates/core/partials/modals/order_success_sell.html
+++ b/templates/core/partials/modals/order_success_sell.html
@@ -1,14 +1,13 @@
 <!-- Modal -->
-<div class="modal fade" id="orderSuccessModal" role="dialog">
+<div class="modal fade" id="orderSuccessModalSell" role="dialog">
     <div class="modal-dialog">
-    <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">×</button>
               <h4 class="modal-title">Success</h4>
             </div>
-            <div class="modal-body successOrder">
-                {% include 'core/partials/success_order.html' %}
+            <div class="modal-body successOrderSell">
+                {% include 'core/partials/success_order_sell.html' %}
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
