--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -5,12 +5,12 @@
 
 {% block formcontent %}
 <h2>Password reseted</h2>
-<p class="alert alert-success">    
-    Your password has been reseted.
-    You can now login using this new password.
+<p class="alert alert-success">
+    {% translate 'Your password has been reset.' %}
+    {% translate 'You can now login using this new password.' %}
      <br>
 </p>
-<p><a href="{% url 'accounts.login' %}">Go to login page now</a></p>
+<p><a href="{% url 'accounts.login' %}">{% translate 'Login now' %}</a></p>
 {% endblock %}
 
 
