--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -7,10 +7,8 @@
 <h2>Email sent!</h2>
 
 <p class="alert alert-success">
-    <strong>If the e-mail you have entered is a valid e-mail for an user account in our site</strong>, you should be receiving a message shortly with the instructions to reset your password. 
+    <strong>If the e-mail you have entered is a valid e-mail for an user account in our site</strong>,
+    you should be receiving a message shortly with the instructions to reset your password.
 </p>
 <p><a href="/">Back to main page</a></p>
 {% endblock %}
-
-
-{# This is used by django.contrib.auth #}
