--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -1,6 +1,7 @@
 html body {
     overflow-x: hidden;
     background-color: #f6fff6;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 .center, .tab-pane {
     text-align: center;
@@ -179,8 +180,20 @@ select {
     pointer-events: none;
 }
 
-.row.register {
-    margin: 30px auto;
+.auth-steps {
+    min-height:120px;
+}
+
+.register .step1, .register .step2 {
+    margin: 10px auto;
+}
+
+.step2 input {
+    text-align: center;
+}
+
+.register input {
+    margin-top: 2px;
 }
 
 @media screen and (max-device-width: 600px){
@@ -318,21 +331,19 @@ html body .form-control {
 
 .supported-payments {
     background: lightgreen;
-    padding: 50px 0;
+    padding: 35px 0;
     height: 150px;
+    margin-top: 20px;
 }
 
 .supported_payment {
     height: 35px;
-    width: 120px;
+    width: 130px;
     margin: 30px 0;
 }
 
 html body .tab-pane{
     margin-bottom: 0;
-}
-.tab-content {
-    min-height: 600px;
 }
 
 .navbar-light {
@@ -348,10 +359,15 @@ footer {
     width: 100%;
     background: lightgreen;
     text-align: center;
-    margin: 10px auto 0 auto;
     padding: 10px 0;
+    border-top: 1px solid whitesmoke;
 }
 
 .menuSection {
     min-height: 60%;
+}
+
+#verification_code {
+    max-width: 206px;
+    margin: 0 auto;
 }
