--- a/templates/core/partials/payment_options.html
+++ b/templates/core/partials/payment_options.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load static %}
 <div class="row {{ type }}">
-    {% if type == 'buy' %}
+    {% if type == 'buy' %}              <!-- TO-DO get this from database ??-->
     <div class="col col-xs-12 col-sm-4 payment-type-trigger" data-type="Alpha">
         <div class="col col-xs-12">
             <img src="{% static 'icons/alfa.png' %}"
@@ -11,7 +11,7 @@
         <div class="col col-xs-12 payment-label">
             {% trans 'Alfa-bank' %}
         </div>
-    </div>
+    </div>                              <!-- TO-DO get this from database ??-->
     <div class="col col-xs-12 col-sm-4 payment-type-trigger" data-type="Sber">
         <div class="col col-xs-12">
             <img src="{% static 'icons/sber.png' %}"
@@ -22,7 +22,7 @@
             {% trans 'Sberbank' %}
         </div>
     </div>
-    {% else %}
+    {% else %}                          <!-- TO-DO get this from database ??-->
     <div class="col col-xs-12 col-sm-4 payment-type-trigger bank" data-type="c2c">
         <div class="col col-xs-12">
             <i class="fa fa-credit-card-alt fa-5 payment-method-icon btn btn-primary">
@@ -31,7 +31,7 @@
         <div class="col col-xs-12 payment-label">
             {% trans 'Card 2 card - any bank' %}
         </div>
-    </div>
+    </div>                              <!-- TO-DO get this from database ??-->
     <div class="col col-xs-12 col-sm-4 payment-type-trigger" data-type="cash">
         <div class="col col-xs-12">
             <i class="fa fa-money fa-5 payment-method-icon btn btn-primary">
@@ -41,7 +41,7 @@
             {% trans 'Cash payment' %}
         </div>
     </div>
-    {% endif %}
+    {% endif %}                         <!-- TO-DO get this from database ??-->
     <div class="col col-xs-12 col-sm-4 payment-type-trigger qiwi" data-type="qiwi">
         <div class="col col-xs-12">
             <img src="{% static 'icons/qiwi.png' %}"
