--- a/templates/core/partials/steps/step_confirmation.html
+++ b/templates/core/partials/steps/step_confirmation.html
@@ -1,15 +1,12 @@
 {% extends 'core/partials/steps/step_base.html' %}
 {% load i18n %}
 {% block step_content %}
-    <div class="row step-confirm">
+    <div class="row step-confirm panel">
         <h3>{% trans "Your Order" %}</h3>
         <div class="col-sm-12 center">
             <div class="col-sm-5 col-md-5">
                 <div class="col-lg-12">
-                    <h2 class="amount btc-amount-confirm"></h2>
-                </div>
-                <div class="col-lg-12">
-                    {%  trans "BTC" %}
+                    <h2 class="amount btc-amount-confirm"></h2> {%  trans "BTC" %}
                 </div>
             </div>
             <div class="col-sm-2 col-md-2">
@@ -20,7 +17,7 @@
                     <h2 class="amount cash-amount-confirm"></h2>
                 </div>
                 <div class="currency col-lg-12">
-                    <!--{%  trans "RUB" %}-->
+                    {%  trans "RUB" %}
                 </div>
             </div>
             <div class="col-lg-12">
@@ -29,20 +26,23 @@
             <div class="col-lg-12">
                 <h3 class="payment-preference-confirm"></h3>
             </div>
-
+            <div class="col-lg-12">
+                <h3 class="payment-preference-identifier-confirm"></h3>
+            </div>
         <div style="display:none">
           <input type="hidden" name="csrfmiddlewaretoken" id="csrfmiddlewaretoken" value="{{ csrf_token }}">
         </div>
         <!-- Modal -->
-        <input type="hidden" name="type" value="1" class="trade-type">
-        <input type="hidden" name="payment-option" value="" class="payment-option">
-        <input type="hidden" name="payment-preference" value="" class="payment-preference">
-        <input type="hidden" name="payment-preference-identifier" value="" class="payment-preference-identifier">
-        <input type="hidden" name="payment-preference-owner" value="" class="payment-preference-owner">
-        <span class="btn btn-info buy-go btn-lg" href="/">Cancel</span>
-        <button  class="sell-go btn btn-danger btn-lg place-order hidden">{% trans "Sell" %}</button>
-        <button  class="buy-go btn btn-success btn-lg place-order ">{% trans "Buy" %}</button>
-
+        <div class="col-lg-12"> 
+            <input type="hidden" name="type" value="1" class="trade-type">
+            <input type="hidden" name="payment-option" value="" class="payment-option">
+            <input type="hidden" name="payment-preference" value="" class="payment-preference">
+            <input type="hidden" name="payment-preference-identifier" value="" class="payment-preference-identifier">
+            <input type="hidden" name="payment-preference-owner" value="" class="payment-preference-owner">
+            <span class="btn btn-info buy-go btn-lg" href="/">Cancel</span>
+            <button  class="sell-go btn btn-danger btn-lg place-order hidden">{% trans "Sell" %}</button>
+            <button  class="buy-go btn btn-success btn-lg place-order ">{% trans "Buy" %}</button>
+        </div>
     </div>
 </div>
 
