--- a/templates/core/partials/success_order.html
+++ b/templates/core/partials/success_order.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
             <div class="col col-lg-12">
-                {{bank_account}}
+                <p><strong>{{bank_account}}</strong></p>
             </div>
         </div>
         <div class="row">
@@ -19,7 +19,7 @@
         </div>
         <div class="row">
             <div class="col col-lg-12 unique_ref">
-                {{unique_ref}}
+                <p><strong>{{unique_ref}}</strong></p>
             </div>
         </div>
         <div class="col col-lg-12">
@@ -27,7 +27,7 @@
         </div>
         {% localtime on %}
         <div class="col col-lg-12" id="pay_until_notice">
-            <strong>{{pay_until |date:"H:iA (e)"}}</strong>
+            <p><strong>{{pay_until |date:"H:iA (e)"}}</strong></p>
         </div>
         {% endlocaltime %}
     </div><!-- /pannel-body -->
