--- a/templates/core/result_order.html
+++ b/templates/core/result_order.html
@@ -9,8 +9,8 @@
 <div class="row">
 	<div class="col-xs-12 col-sm-6 col-md-6 col-sm-offset-3 col-md-offset-3">
 		<div class="jumbotron">
-			<center><h1>Sucess !</h1></center>
-			<p>Please tranfer to this bank account:</p> 
+			<h1>Order created successfully</h1>
+			<p>Please transfer to this bank account:</p>
 			<p>{{bank_account}}</p>
 			<br>
 			<p>Using this reference number:</p> 
