--- a/templates/core/user_login.html
+++ b/templates/core/user_login.html
@@ -15,7 +15,7 @@
   {% bootstrap_form form %}
 
 
-  <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="Login">
+  <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="{% trans "Login" %}">
   <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
