--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,18 +1,21 @@
-{% load i18n %}{% autoescape off %}
+{% load i18n %}
+{% autoescape off %}
 
 
-You are receiving this message because you asked for a password reset at BTX Exchange website.
+{% translate "You are receiving this message because you asked for a password reset at BTX Exchange website." %}
 
-Please, follow the link below to create a new password:{% block reset_link %}
+{% translate "Please, follow the link below to create a new password:{% block reset_link" %}
 
 {{ protocol }}://{{ domain }}{% url 'accounts.password_reset_confirm' uidb64=uid token=token %}
 
 
 {% endblock %}
 
-In case you have forgot, your username is "{{ user.get_username }}"
+{% translate "In case you have forgot, your username is" %} "{{ user.get_username }}"
 
 
-Regards, team  BTX Exchange
+{% translate "Regards, team  BTX Exchange" %}
 
 {% endautoescape %}
+
+{# This is used by django.contrib.auth #}
