--- a/templates/registration/registration_base.html
+++ b/templates/registration/registration_base.html
@@ -1,14 +1,16 @@
 {% extends "core/base.html" %}
+{% load i18n %}
 {% load bootstrap3 %}
 
-{% block title %}Password Reset{% endblock %}
+{% block title %}{% translate "Password Reset"%}{% endblock %}
 
 
 {% block main %}	
 
 <div class="page-header">
   <h1>
-    BTC - Exchange <small>Passowrd reset</small>
+    {% translate "BTC - Exchange" %}
+      <small>{% translate "Password reset" %}</small>
   </h1>
 </div>
 
