--- a/templates/core/partials/payment_options.html
+++ b/templates/core/partials/payment_options.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     {% endif %}                         <!-- TO-DO get this from database ??-->
-    <div class="col col-xs-12 col-sm-4 payment-type-trigger qiwi" data-type="qiwi">
+    <div class="col col-xs-12 col-sm-4 payment-type-trigger qiwi" data-type="Qiwi">
         <div class="col col-xs-12">
             <img src="{% static 'icons/qiwi.png' %}"
                  alt="{% trans 'Qiwi wallet' %}"
