--- a/templates/core/partials/steps/step_confirmation.html
+++ b/templates/core/partials/steps/step_confirmation.html
@@ -6,7 +6,10 @@
         <div class="col-sm-12 center">
             <div class="col-sm-5 col-md-5">
                 <div class="col-lg-12">
-                    <h2 class="amount btc-amount-confirm"></h2> {%  trans "BTC" %}
+                    <h2 class="amount btc-amount-confirm"></h2>
+                </div>
+                <div class="col-lg-12">
+                    {%  trans "BTC" %}
                 </div>
             </div>
             <div class="col-sm-2 col-md-2">
@@ -17,7 +20,7 @@
                     <h2 class="amount cash-amount-confirm"></h2>
                 </div>
                 <div class="currency col-lg-12">
-                    {%  trans "RUB" %}
+                    <!--{%  trans "RUB" %}-->
                 </div>
             </div>
             <div class="col-lg-12">
