--- a/templates/core/order.html
+++ b/templates/core/order.html
@@ -19,19 +19,15 @@
     {% include 'core/partials/testemonials.html' %}
     {% include 'core/partials/press.html' %}
 {% endblock %}
-
-{% block footer %}
+{% block seo_footer %}
     {% include 'core/partials/supported_paymnets.html' %}
 {% endblock %}
 
 {% block extra_js_footer %}
-
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/highcharts-more.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="{% static 'bower_components/card/dist/jquery.card.js' %}"></script>
     <script src="{% static 'bower_components/intl-tel-input/build/js/intlTelInput.min.js' %}"></script>
     <script src="{% static 'js/bundle.js' %}"></script>
-
 {% endblock %}
-
