--- a/templates/core/partials/modals/payment_type.html
+++ b/templates/core/partials/modals/payment_type.html
@@ -14,7 +14,7 @@
             {% endif %}
         </div>
         <div class="modal-body">
-            {% include 'core/partials/payment_options.html' with type=type %}
+            {% include 'core/partials/payment_options.html' with type=type cards=cards %}
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">
