Working BUT flow! YAY!

--- a/templates/core/partials/modals/order_success_buy.html
+++ b/templates/core/partials/modals/order_success_buy.html
@@ -10,7 +10,7 @@
             {% include 'core/partials/success_order.html' %}
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <a href="/order" class="btn btn-default">Close</a>
         </div>
       </div>
     </div>
