--- a/templates/core/partials/modals/payment_type.html
+++ b/templates/core/partials/modals/payment_type.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <!-- Modal -->
-<div class="modal fade" id="{{ id }}" role="dialog">
+<div class="modal fade" id="{{ id|default:"PayMethModal"}}" role="dialog">
     <div class="modal-dialog">
 
       <!-- Modal content-->
