--- a/templates/core/partials/supported_paymnets.html
+++ b/templates/core/partials/supported_paymnets.html
@@ -2,13 +2,13 @@
 <div class="supported-payments">
     {# banks #}
    <div class="col col-xs-6 col-sm-3 center">
-       <img src="{% static 'icons/sber_color.png' %}" alt="sberbank" class="supported_payment Sber">
+       <img src="{% static 'icons/sber_color.png' %}" alt="sberbank" class="supported_payment">
    </div>
    <div class="col col-xs-6 col-sm-3 center">
-        <img src="{% static 'icons/alfa_transparent.png' %}" alt="alfa bank" class="supported_payment alfa">
+        <img src="{% static 'icons/alfa_transparent.png' %}" alt="alfa bank" class="supported_payment">
    </div>
-    <div class="col col-xs-6 col-sm-3    center">
-        <img src="{% static 'icons/btb24.png' %}" alt="btb24" class="supported_payment btb24">
+    <div class="col col-xs-6 col-sm-3 center">
+        <img src="{% static 'icons/btb24.png' %}" alt="btb24" class="supported_payment">
     </div>
 
     {# cards #}
@@ -24,7 +24,7 @@
 
     {# wallets #}
    <div class="col col-xs-6 col-sm-3 center">
-       <img src="{% static 'icons/qiwi_en.png' %}" alt="Qiwi wallet" class="supported_payment qiwi">
+       <img src="{% static 'icons/qiwi_en.png' %}" alt="Qiwi wallet" class="supported_payment">
    </div>
 {#   <div class="col col-xs-4 col-sm-2 center">#}
 {#        <img src="{% static 'icons/wm.png' %}" alt="WebMoney" class="supported_payment webmoney">#}
