checkout js to release

--- a/templates/core/bulkload_transaction.html
+++ b/templates/core/bulkload_transaction.html
@@ -11,7 +11,7 @@
 				<div class="row">
 						<div class="alert alert-danger" role="alert">
 			            	<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-			            	 <div id="alerta-mensaje">{{ error }} </div>
+			            	 <div id="alerta-mensaje"><strong>Atention: </strong> {{ error }} </div>
 			          	</div>
 				</div>
 		        {% endif %}
@@ -20,7 +20,7 @@
 				<div class="row">
 						<div class="alert alert-success " role="alert">
 			            	<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-			            	 <div id="alerta-mensaje"> {{ success }} </div>
+			            	 <div id="alerta-mensaje"><strong>Result: </strong> {{ success }} </div>
 			          	</div>
 				</div>
 		        {% endif %}
