--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -13,7 +13,7 @@
       <div class="col-md-12 column">          
           <div class="alert alert-danger">
             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-             <div id="alerta-mensaje"> </strong> {{ error }} </div>
+             <div id="alerta-mensaje"><strong>{% trans "Atencion:" %} </strong> {{ error }} </div>
           </div>
       </div>
     </div>    
@@ -23,7 +23,7 @@
       <div class="col-md-12 column">          
           <div class="alert alert-success" id="exito-mensaje">
             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                <div id="exito-mensaje"> {{ success }} </div>
+                <div id="exito-mensaje"><strong>{% trans "Exito:" %} </strong> {{ success }} </div>
           </div>
       </div>
     </div>    
