--- a/templates/core/partials/success_order_sell.html
+++ b/templates/core/partials/success_order_sell.html
@@ -1,25 +1,16 @@
 {%  load i18n %}
 {% load tz %}
-<div class="panel panel-success">
-    <div class="panel-body">
-        <h1>{% trans 'Order placed successfully' %}</h1>
-        <div class="row">
-            <div class="col col xs-12"></div>
-            {% trans 'Please tranfer to this BTC Address' %}
-        </div>
-        <div class="row">
-            <div class="col col-lg-12">
-                 <p><strong> {{ address }}</strong></p>
-            </div>
-        </div>
-        <div class="col col-lg-12">
-         {% trans 'Notice that you must pay until' %}
-        </div>
-        {% localtime on %}
-        <div class="col col-lg-12" id="pay_until_notice">
-            <p><strong>{{pay_until |date:"H:iA (e)"}}</strong></p>
-        </div>
-        {% endlocaltime %}
-    </div><!-- /pannel-body -->
-</div><!-- /pannel -->
-<input type="hidden" name="order_id" value="{{order_id}}" class="order_id" >
+
+	<div class="panel panel-success">
+		<div class="panel-body">
+	  		<center><h1>Success !</h1></center>
+	  		<p>Please tranfer to this BTC Address:</p> 
+	  		<p id="btcAddress">{{btc_address}}</p>
+	  		{% localtime on %}
+	  			<p id="pay_until_notice">Notice that you must send coins until <strong>{{pay_until |date:"H:iA (e)"}}</strong> </p>
+	  		{% endlocaltime %}
+			{#  <p><a class="btn btn-primary btn-lg" role="button" href="/order/">Done ! </a></p> #}
+	 	</div>
+	</div>
+	 <input type="hidden" name="order_id" value="{{order_id}}" class="order_id" >
+	
