--- a/templates/core/partials/supported_paymnets.html
+++ b/templates/core/partials/supported_paymnets.html
@@ -1,14 +1,14 @@
 {% load static %}
 <div class="supported-payments">
     {# banks #}
-   <div class="col col-xs-6 col-sm-3 center">
-       <img src="{% static 'icons/sber_color.png' %}" alt="sberbank" class="supported_payment">
+   <div class="col col-xs-4 col-sm-2 center">
+       <img src="{% static 'icons/sber_color.png' %}" alt="sberbank" class="supported_payment Sber">
    </div>
-   <div class="col col-xs-6 col-sm-3 center">
-        <img src="{% static 'icons/alfa_transparent.png' %}" alt="alfa bank" class="supported_payment">
+   <div class="col col-xs-4 col-sm-2 center">
+        <img src="{% static 'icons/alfa_transparent.png' %}" alt="alfa bank" class="supported_payment alfa">
    </div>
-    <div class="col col-xs-6 col-sm-3 center">
-        <img src="{% static 'icons/btb24.png' %}" alt="btb24" class="supported_payment">
+    <div class="col col-xs-4 col-sm-2 center">
+        <img src="{% static 'icons/btb24.png' %}" alt="btb24" class="supported_payment btb24">
     </div>
 
     {# cards #}
@@ -23,14 +23,14 @@
     {# </div>#}
 
     {# wallets #}
-   <div class="col col-xs-6 col-sm-3 center">
-       <img src="{% static 'icons/qiwi_en.png' %}" alt="Qiwi wallet" class="supported_payment">
+   <div class="col col-xs-4 col-sm-2 center">
+       <img src="{% static 'icons/qiwi_en.png' %}" alt="Qiwi wallet" class="supported_payment qiwi">
    </div>
-{#   <div class="col col-xs-4 col-sm-2 center">#}
-{#        <img src="{% static 'icons/wm.png' %}" alt="WebMoney" class="supported_payment webmoney">#}
-{#   </div>#}
-{#    <div class="col col-xs-4 col-sm-2 center">#}
-{#        <img src="{% static 'icons/skrill.png' %}" alt="Skrill" class="supported_payment btb24">#}
-{#    </div>#}
+   <div class="col col-xs-4 col-sm-2 center">
+        <img src="{% static 'icons/wm.png' %}" alt="WebMoney" class="supported_payment webmoney">
+   </div>
+    <div class="col col-xs-4 col-sm-2 center">
+        <img src="{% static 'icons/skrill.png' %}" alt="Skrill" class="supported_payment btb24">
+    </div>
 
 </div>
