--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -6,14 +6,15 @@
 {% block formcontent %}
 
 
-<h2>{% translate "Define new password" %}</h2>
-<p>{% translate "Fill in the form with your new password to complete the process:" %}</p>
+<h2>Define new password</h2>
+<p>Fill in the form with your new password to complete the proccess:</p>
 
 
 <form method="post" action="">
     {% csrf_token %}
-    {% bootstrap_form form %}
-    <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="{% translate "Define new password" %}">
+    {% bootstrap_form form  %}
+    
+    <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="Define new password">
 </form>
 {% endblock %}
 
