--- a/templates/core/partials/forms/phone.html
+++ b/templates/core/partials/forms/phone.html
@@ -1,8 +1,10 @@
 {% load i18n %}
 <div class="row">
+    <div class="col col-lg-12">{% trans label %}</div>
+</div>
+<div class="row">
     <div class="col col-lg-12">
-        <label for="phone">{% trans label %} </label>
-            <input type="text" name="phone" class="phone val"
-                   value="{% if user.is_authenticated  %}{{ user.profile.phone }}{% else %}+7{% endif %}">
+        <input type="text" name="phone" class="phone val"
+               value="{% if user.is_authenticated  %}{{ user.profile.phone }}{% else %}+7{% endif %}">
     </div>
 </div>
