--- a/templates/core/partials/spa_navigation.html
+++ b/templates/core/partials/spa_navigation.html
@@ -1,8 +1,7 @@
-{% load i18n %}
 <ul class="list-unstyled list-inline spa-navigation">
     <li>
         <button type="button" class="btn btn-info next-step">
-            {% trans 'Next' %}
+            Next
             <i class="fa fa-chevron-right"></i>
         </button>
     </li>
