--- a/templates/core/partials/steps/step_confirmation.html
+++ b/templates/core/partials/steps/step_confirmation.html
@@ -1,45 +1,48 @@
 {% extends 'core/partials/steps/step_base.html' %}
 {% load i18n %}
 {% block step_content %}
-    <div class="row step-confirm panel">
+    <div class="row step-confirm">
         <h3>{% trans "Your Order" %}</h3>
         <div class="col-sm-12 center">
             <div class="col-sm-5 col-md-5">
-                <div class="col-lg-12 confirmation-elem">
-                    <span class="amount btc-amount-confirm"></span> {%  trans "BTC" %}
-                </div>
-            </div>
-            <div class="col-sm-2 col-md-2 confirmation-elem">
-                <span>{% trans "For" %}</span>
-            </div>
-            <div class="col-sm-5 col-md-5 confirmation-elem">
                 <div class="col-lg-12">
-                    <span class="amount cash-amount-confirm"></span> <span class="currency"></span>
+                    <h2 class="amount btc-amount-confirm"></h2>
+                </div>
+                <div class="col-lg-12">
+                    {%  trans "BTC" %}
                 </div>
             </div>
-            <div class="col-lg-12 confirmation-elem">
-                <span>{% trans "Payment Method" %}</span>
+            <div class="col-sm-2 col-md-2">
+                <h2>{% trans "For" %}</h2>
             </div>
-            <div class="col-lg-12 confirmation-elem">
-                <span class="payment-preference-confirm"></span>
+            <div class="col-sm-5 col-md-5">
+                <div class="col-lg-12">
+                    <h2 class="amount cash-amount-confirm"></h2>
+                </div>
+                <div class="currency col-lg-12">
+                    <!--{%  trans "RUB" %}-->
+                </div>
             </div>
-            <div class="col-lg-12 confirmation-elem">
-                <span class="payment-preference-identifier-confirm"></span>
+            <div class="col-lg-12">
+                <h3>{% trans "Payment Method" %}</h3>
             </div>
+            <div class="col-lg-12">
+                <h3 class="payment-preference-confirm"></h3>
+            </div>
+
         <div style="display:none">
           <input type="hidden" name="csrfmiddlewaretoken" id="csrfmiddlewaretoken" value="{{ csrf_token }}">
         </div>
         <!-- Modal -->
-        <div class="col-lg-12"> 
-            <input type="hidden" name="type" value="1" class="trade-type">
-            <input type="hidden" name="payment-option" value="" class="payment-option">
-            <input type="hidden" name="payment-preference" value="" class="payment-preference">
-            <input type="hidden" name="payment-preference-identifier" value="" class="payment-preference-identifier">
-            <input type="hidden" name="payment-preference-owner" value="" class="payment-preference-owner">
-            <a href="/" class="btn btn-info buy-go btn-lg">Cancel</a>
-            <button  class="sell-go btn btn-danger btn-lg place-order hidden">{% trans "Sell" %}</button>
-            <button  class="buy-go btn btn-success btn-lg place-order ">{% trans "Buy" %}</button>
-        </div>
+        <input type="hidden" name="type" value="1" class="trade-type">
+        <input type="hidden" name="payment-option" value="" class="payment-option">
+        <input type="hidden" name="payment-preference" value="" class="payment-preference">
+        <input type="hidden" name="payment-preference-identifier" value="" class="payment-preference-identifier">
+        <input type="hidden" name="payment-preference-owner" value="" class="payment-preference-owner">
+        <span class="btn btn-info buy-go btn-lg" href="/">Cancel</span>
+        <button  class="sell-go btn btn-danger btn-lg place-order hidden">{% trans "Sell" %}</button>
+        <button  class="buy-go btn btn-success btn-lg place-order ">{% trans "Buy" %}</button>
+
     </div>
 </div>
 
