--- a/templates/core/partials/success_order.html
+++ b/templates/core/partials/success_order.html
@@ -5,11 +5,11 @@
         <h1>{% trans 'Order placed successfully' %}</h1>
         <div class="row">
             <div class="col col xs-12"></div>
-            {% trans 'Please make payment to the following' %} {{ order.payment_preference.payment_method.name }}
+            {% trans 'Please make payment to the following' %} {{ payment_method }}
         </div>
         <div class="row">
             <div class="col col-lg-12">
-                <p><strong>{{order.payment_preference.identifier}}</strong></p>
+                {{bank_account}}
             </div>
         </div>
         <div class="row">
@@ -19,7 +19,7 @@
         </div>
         <div class="row">
             <div class="col col-lg-12 unique_ref">
-                <p><strong>{{unique_ref}}</strong></p>
+                {{unique_ref}}
             </div>
         </div>
         <div class="col col-lg-12">
@@ -27,7 +27,7 @@
         </div>
         {% localtime on %}
         <div class="col col-lg-12" id="pay_until_notice">
-            <p><strong>{{pay_until |date:"H:iA (e)"}}</strong></p>
+            <strong>{{pay_until |date:"H:iA (e)"}}</strong>
         </div>
         {% endlocaltime %}
     </div><!-- /pannel-body -->
