--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,21 +1,18 @@
-{% load i18n %}
-{% autoescape off %}
+{% load i18n %}{% autoescape off %}
 
 
-{% translate "You are receiving this message because you asked for a password reset at BTX Exchange website." %}
+You are receiving this message because you asked for a password reset at BTX Exchange website.
 
-{% translate "Please, follow the link below to create a new password:{% block reset_link" %}
+Please, follow the link below to create a new password:{% block reset_link %}
 
 {{ protocol }}://{{ domain }}{% url 'accounts.password_reset_confirm' uidb64=uid token=token %}
 
 
 {% endblock %}
 
-{% translate "In case you have forgot, your username is" %} "{{ user.get_username }}"
+In case you have forgot, your username is "{{ user.get_username }}"
 
 
-{% translate "Regards, team  BTX Exchange" %}
+Regards, team  BTX Exchange
 
 {% endautoescape %}
-
-{# This is used by django.contrib.auth #}
