--- a/templates/registration/registration_base.html
+++ b/templates/registration/registration_base.html
@@ -1,16 +1,14 @@
 {% extends "core/base.html" %}
-{% load i18n %}
 {% load bootstrap3 %}
 
-{% block title %}{% translate "Password Reset"%}{% endblock %}
+{% block title %}Password Reset{% endblock %}
 
 
 {% block main %}	
 
 <div class="page-header">
   <h1>
-    {% translate "BTC - Exchange" %}
-      <small>{% translate "Password reset" %}</small>
+    BTC - Exchange <small>Passowrd reset</small>
   </h1>
 </div>
 
