--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -56,6 +56,9 @@
         {% block main %}
         {% endblock %}
     </div>
+
+   {% block footer %}
+   {%  endblock %}
     {% include 'core/partials/popular_faq.html' %}
     {% include 'core/partials/seo_footer.html' %}
     {% include 'core/partials/footer.html' %}
@@ -74,6 +77,7 @@
           Cookies.set("USER_TZ", moment.tz.guess());
         });
     </script>
+    <script src="{% static 'js/bundle.js' %}"></script>
     <script src="{% static 'js/footer.js' %}"></script>
 
     {% bootstrap_javascript %}
