--- a/templates/core/partials/payment_options.html
+++ b/templates/core/partials/payment_options.html
@@ -1,8 +1,10 @@
 {% load i18n %}
 {% load static %}
 <div class="row {{ type }}">
-    {% if type == 'buy' %}
-    <div class="col col-xs-12 col-sm-4 payment-type-trigger" data-type="Alpha">
+    {% if type == 'buy' %}              <!-- TO-DO get this from database ??-->
+    <div class="col col-xs-12 col-sm-4 payment-type-trigger"
+         data-type="Alpha"
+         data-identifier="{{ cards.alfa.identifier }}">
         <div class="col col-xs-12">
             <img src="{% static 'icons/alfa.png' %}"
                  alt="{% trans 'Alfa-bank' %}"
@@ -11,8 +13,10 @@
         <div class="col col-xs-12 payment-label">
             {% trans 'Alfa-bank' %}
         </div>
-    </div>
-    <div class="col col-xs-12 col-sm-4 payment-type-trigger" data-type="Sber">
+    </div>                              <!-- TO-DO get this from database ??-->
+    <div class="col col-xs-12 col-sm-4 payment-type-trigger"
+         data-type="Sber"
+         data-identifier="{{ cards.sber.identifier }}">
         <div class="col col-xs-12">
             <img src="{% static 'icons/sber.png' %}"
                  alt="{% trans 'Sberbank' %}"
@@ -22,7 +26,7 @@
             {% trans 'Sberbank' %}
         </div>
     </div>
-    {% else %}
+    {% else %}                          <!-- TO-DO get this from database ??-->
     <div class="col col-xs-12 col-sm-4 payment-type-trigger bank" data-type="c2c">
         <div class="col col-xs-12">
             <i class="fa fa-credit-card-alt fa-5 payment-method-icon btn btn-primary">
@@ -31,7 +35,7 @@
         <div class="col col-xs-12 payment-label">
             {% trans 'Card 2 card - any bank' %}
         </div>
-    </div>
+    </div>                              <!-- TO-DO get this from database ??-->
     <div class="col col-xs-12 col-sm-4 payment-type-trigger" data-type="cash">
         <div class="col col-xs-12">
             <i class="fa fa-money fa-5 payment-method-icon btn btn-primary">
@@ -41,8 +45,10 @@
             {% trans 'Cash payment' %}
         </div>
     </div>
-    {% endif %}
-    <div class="col col-xs-12 col-sm-4 payment-type-trigger qiwi" data-type="qiwi">
+    {% endif %}                         <!-- TO-DO get this from database ??-->
+    <div class="col col-xs-12 col-sm-4 payment-type-trigger qiwi"
+         data-type="Qiwi"
+         data-identifier="{{ cards.qiwi.identifier }}">
         <div class="col col-xs-12">
             <img src="{% static 'icons/qiwi.png' %}"
                  alt="{% trans 'Qiwi wallet' %}"
