fixed qiwi modal bug

--- a/templates/core/partials/success_order_sell.html
+++ b/templates/core/partials/success_order_sell.html
@@ -10,6 +10,7 @@
         <div class="row">
             <div class="col col-lg-12">
                  <p><strong> {{ address }}</strong></p>
+                <img src="http://blockr.io/api/v1/address/Qr/{{ address }}" alt="{{ address }}">
             </div>
         </div>
         <div class="col col-lg-12">
