just a theory to solve graph in prod

--- a/templates/core/partials/steps/step_amount.html
+++ b/templates/core/partials/steps/step_amount.html
@@ -4,7 +4,7 @@
    <div class="input-group-btn">
         {{select_pair| safe}}
     </div>
-    <div id="container" style="width: 100%; height: 350px; margin: 0 auto">
+    <div id="container-graph" style="width: 100%; height: 350px; margin: 0 auto">
     </div>
     <div class="row">
         <div class="col-xs-5 col-sm-5 col-md-5 center-block controls">
