--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -52,13 +52,13 @@
         {% include 'core/partials/menu.html' %}
     </div>
     <div class="container">
-
         {% block main %}
         {% endblock %}
     </div>
 
    {% block footer %}
-   {%  endblock %}
+       {% include 'core/partials/supported_paymnets.html' %}
+   {% endblock %}
     {% include 'core/partials/popular_faq.html' %}
     {% include 'core/partials/seo_footer.html' %}
     {% include 'core/partials/footer.html' %}
