--- a/templates/core/partials/forms/card.html
+++ b/templates/core/partials/forms/card.html
@@ -10,10 +10,10 @@
             </div>
             <div class="col col-sm-5">
                 <input placeholder="{% trans "Full name" %}" type="text"
-                       value="Ivan Ivanov" name="name">
+                       value="Ivan Ivanov" name="name" class="name">
             </div>
             <div class="col-sm-4 col-sm-offset-4">
-                <span class="btn btn-primary save save-card disabled">{% trans "Go" %}</span>
+                <span class="btn btn-primary save save-card">{% trans "Go" %}</span>
             </div>
         </div>
     </div>
