--- a/templates/core/partials/modals/sell.html
+++ b/templates/core/partials/modals/sell.html
@@ -30,8 +30,8 @@
             </div>
         </div>
         <div class="modal-footer">
-          <span class="btn btn-warning back back">{% trans 'back' %}</span>
-          <span class="btn btn-default" data-dismiss="modal">Close</span>
+          <span class="btn btn-warning back back">{% trans 'Back' %}</span>
+          <span class="btn btn-default" data-dismiss="modal">{% trans 'Close' %}</span>
         </div>
       </div>
     </div>
