full working sell process

--- a/templates/core/partials/steps/step_confirmation.html
+++ b/templates/core/partials/steps/step_confirmation.html
@@ -42,9 +42,8 @@
         </div>
     </div>
 </div>
-
-{% include 'core/partials/modals/order_success_buy.html' %}
-{% include 'core/partials/modals/order_success_sell.html' %}
+{# used for success modal placement #}
+<div class="successOrder"></div>
 
 {% endblock %}
 {% block spa_navigation %}
