--- a/templates/core/partials/modals/order_success_sell.html
+++ b/templates/core/partials/modals/order_success_sell.html
@@ -13,13 +13,15 @@
         </div>
         <div class="row">
             <div class="col col-lg-12">
+                <div class="qrContainer btn btn-success">
+                    <img src="//blockr.io/api/v1/address/Qr/{{ address }}" alt="{{ address }}">
+                </div>
+            </div>
+           <div class="col col-lg-12">
                 <span class="btn btn-success" title="{% trans 'Copy' %}">
                     <i class="fa fa-copy"></i>
                     <strong>{{address}}</strong>
                 </span>
-            </div>
-            <div class="col col-lg-12">
-                <img src="//blockr.io/api/v1/address/Qr/{{ address }}" alt="{{ address }}">
             </div>
         </div>
         <div class="row">
