Full working flow

--- a/templates/core/index_order.html
+++ b/templates/core/index_order.html
@@ -169,29 +169,15 @@
 		        {% endif %}
 		    </span>
 		</div>
-	 
-	
- <script>	
-   $(function() {
-    $( "#id_date" ).datepicker({ dateFormat: 'yy-mm-dd' }); 
-  });
-
- 
-  </script>	
-
-
 {% endblock %}
-
-
 {% block extra_js_footer %}
     <script src="{% static 'js/index_orders.js' %}"></script>
-
 	<link href="{% static 'bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css' %}" rel="stylesheet">
 	<script src="{% static 'bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js' %}"></script>
-
 	<script type="text/javascript">
 		$(function () {
-		  $('[data-toggle="popover"]').popover({content: $("#popover-template").html()})
-		})
+            $('[data-toggle="popover"]').popover({content: $("#popover-template").html()});
+            $( "#id_date" ).datepicker({ dateFormat: 'yy-mm-dd' });
+		});
 	</script>
 {% endblock %}
