--- a/templates/core/order.html
+++ b/templates/core/order.html
@@ -25,4 +25,5 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="{% static 'bower_components/card/dist/jquery.card.js' %}"></script>
     <script src="{% static 'bower_components/intl-tel-input/build/js/intlTelInput.min.js' %}"></script>
+    <script src="{% static 'js/bundle.js' %}"></script>
 {% endblock %}
