--- a/templates/core/partials/menu.html
+++ b/templates/core/partials/menu.html
@@ -43,7 +43,7 @@
             </option>
             {% endfor %}
             </select>
-            <input type="submit" class="btn btn-warning" value="Go" />
+            <input type="submit" class="btn btn-warning" value={% trans "Go"%} />
           </form>            
         </li>
 
