--- a/templates/core/partials/payment_options.html
+++ b/templates/core/partials/payment_options.html
@@ -7,11 +7,11 @@
          data-identifier="{{ cards.alfa.identifier }}">
         <div class="col col-xs-12">
             <img src="{% static 'icons/alfa.png' %}"
-                 alt="{% trans 'Alfa-bank' %}"
+                 alt="{% trans 'Alfa-bank'%}"
                  class="payment-method-icon btn btn-primary">
         </div>
         <div class="col col-xs-12 payment-label">
-            {% trans 'Alfa-bank' %}
+            {%trans 'Alfa-bank'%}
         </div>
     </div>                              <!-- TO-DO get this from database ??-->
     <div class="col col-xs-12 col-sm-4 payment-type-trigger"
@@ -19,11 +19,11 @@
          data-identifier="{{ cards.sber.identifier }}">
         <div class="col col-xs-12">
             <img src="{% static 'icons/sber.png' %}"
-                 alt="{% trans 'Sberbank' %}"
+                 alt="{% trans 'Sberbank'%}"
                  class="payment-method-icon btn btn-primary">
         </div>
         <div class="col col-xs-12 payment-label">
-            {% trans 'Sberbank' %}
+            {% trans "Sberbank" %}
         </div>
     </div>
     {% else %}                          <!-- TO-DO get this from database ??-->
@@ -51,11 +51,11 @@
          data-identifier="{{ cards.qiwi.identifier }}">
         <div class="col col-xs-12">
             <img src="{% static 'icons/qiwi.png' %}"
-                 alt="{% trans 'Qiwi wallet' %}"
+                 alt="{% trans 'Qiwi wallet'%}"
                  class="payment-method-icon btn btn-primary">
         </div>
         <div class="col col-xs-12 payment-label">
-            {% trans 'Qiwi wallet' %}
+            {% trans 'Qiwi wallet'%}
         </div>
     </div>
 </div>
