--- a/templates/core/partials/steps/step_authentication.html
+++ b/templates/core/partials/steps/step_authentication.html
@@ -4,10 +4,11 @@
 {% block step_content %}
     
     <div class="register">
-        <h4>{% trans "Phone verification" %}</h4>
+        <h4>{% trans "Phone verification"%}</h4>
         <div class="auth-steps">
             <div class="step1">
-                {% include 'core/partials/forms/phone.html' with label="Enter your phone" %}
+                {% trans "Enter your phone" as enter_your_phone %}
+                {% include 'core/partials/forms/phone.html' with label=enter_your_phone%}
             </div>
             <div class="step2 hidden">
                 <div class="col col-lg-12 register">
@@ -20,13 +21,13 @@
         </div>
         <div class="col col-lg-12 center controls">
             <span class="btn btn-primary create-acc">
-                {% trans "Send SMS" %}
+                {% trans "Send SMS"%}
             </span>
             <span class="btn btn-danger create-acc resend hidden">
-                {% trans "Send again" %}
+                {% trans "Send again"%}
             </span>
             <span class="btn btn-primary verify-acc hidden">
-                {% trans "Go" %}
+                {% trans "Go"%}
             </span>
         </div>
     </div>
