--- a/templates/core/user_registration.html
+++ b/templates/core/user_registration.html
@@ -15,6 +15,6 @@
   {% bootstrap_form profile_form %}
   {% bootstrap_form user_form %}
 
-  <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="Register">
+  <input type="submit" name="submit" class="btn btn-success btn-lg" id="submit" value="{% trans 'Register'%}">
 </form>
 {% endblock %}
