referrals skelton, fix buy bug

--- a/templates/core/partials/payment_options.html
+++ b/templates/core/partials/payment_options.html
@@ -3,7 +3,7 @@
 <div class="row {{ type }}">
     {% if type == 'buy' %}              <!-- TO-DO get this from database ??-->
     <div class="col col-xs-12 col-sm-4 payment-type-trigger"
-         data-type="Alpha"
+         data-type="Alfa"
          data-identifier="{{ cards.alfa.identifier }}">
         <div class="col col-xs-12">
             <img src="{% static 'icons/alfa.png' %}"
